test/sema/typeck/infer-type-struct-constructor-err.out
error: Argument expects value of type `Bool` but got `Int32`.
--> infer-type-struct-constructor-err.dora:15:12
 | 
 | fn expectedConflict(): Box[Bool] {
 |     Box[_](1i32)
              ~~~~
 | }
 | 
error: cannot infer type.
--> infer-type-struct-constructor-err.dora:19:31
 | 
 | fn main() {
 |     let _unresolved = Phantom[_]();
                                 ~
 |     let _conflict = Same[_](1i32, true);
 |     let _invalidBound = Bounded[_](DoesNotImplementTrait());
error: Argument expects value of type `Int32` but got `Bool`.
--> infer-type-struct-constructor-err.dora:20:35
 | fn main() {
 |     let _unresolved = Phantom[_]();
 |     let _conflict = Same[_](1i32, true);
                                     ~~~~
 |     let _invalidBound = Bounded[_](DoesNotImplementTrait());
 |     let _wrongArity = Box[Int32, Bool](unknown);
error: type `DoesNotImplementTrait` does not implement trait `Trait`.
--> infer-type-struct-constructor-err.dora:21:25
 |     let _unresolved = Phantom[_]();
 |     let _conflict = Same[_](1i32, true);
 |     let _invalidBound = Bounded[_](DoesNotImplementTrait());
                           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 |     let _wrongArity = Box[Int32, Bool](unknown);
 |     let _wrongAssociatedType = Associated(ItemOwner(), true);
error: expected 1 type parameters but got 2.
--> infer-type-struct-constructor-err.dora:22:23
 |     let _conflict = Same[_](1i32, true);
 |     let _invalidBound = Bounded[_](DoesNotImplementTrait());
 |     let _wrongArity = Box[Int32, Bool](unknown);
                         ~~~~~~~~~~~~~~~~~~~~~~~~~
 |     let _wrongAssociatedType = Associated(ItemOwner(), true);
 | }
error: unknown identifier `unknown`.
--> infer-type-struct-constructor-err.dora:22:40
 |     let _conflict = Same[_](1i32, true);
 |     let _invalidBound = Bounded[_](DoesNotImplementTrait());
 |     let _wrongArity = Box[Int32, Bool](unknown);
                                          ~~~~~~~
 |     let _wrongAssociatedType = Associated(ItemOwner(), true);
 | }
error: Argument expects value of type `Int32` but got `Bool`.
--> infer-type-struct-constructor-err.dora:23:56
 |     let _invalidBound = Bounded[_](DoesNotImplementTrait());
 |     let _wrongArity = Box[Int32, Bool](unknown);
 |     let _wrongAssociatedType = Associated(ItemOwner(), true);
                                                          ~~~~
 | }
 | 
7 errors found.
