test/sema/typeck/infer-type-struct-constructor-err.dora
struct Phantom[T]
struct Same[T](T, T)
struct Box[T](T)

trait Trait {}
struct DoesNotImplementTrait
struct Bounded[T: Trait](T)

trait HasItem { type Item; }
struct ItemOwner
impl HasItem for ItemOwner { type Item = Int32; }
struct Associated[T: HasItem](T, T::Item)

fn expectedConflict(): Box[Bool] {
    Box[_](1i32)
}

fn main() {
    let _unresolved = Phantom[_]();
    let _conflict = Same[_](1i32, true);
    let _invalidBound = Bounded[_](DoesNotImplementTrait());
    let _wrongArity = Box[Int32, Bool](unknown);
    let _wrongAssociatedType = Associated(ItemOwner(), true);
}
